--- a/express-server/views/add-product.html
+++ b/express-server/views/add-product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <nav>
         <ul>
           <li>
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <form action="/add-product" method="POST">
+      <form action="/admin/product" method="POST">
         <input type="text" name="title" id="title" />
         <button type="submit">Add Product</button>
       </form>
